force-app/zurich-base/main/default/objects/Acta__c/Acta__c.object-meta.xml
<CustomObject>
    <label>Acta</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Acta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>