force-app/zurich-base/main/default/objects/Acta__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Asistentes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>