force-app/zurich-base/main/default/objects/Acta__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completada</label>
    <type>Checkbox</type>
</CustomField>