force-app/zurich-base/main/default/objects/Acta__c/fields/IsViewedByCreator__c.field-meta.xml
<CustomField>
    <fullName>IsViewedByCreator__c</fullName>
    <description>Indica si el usuario que consulta el acta es quien lo ha creado</description>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Viewed By Creator</label>
    <type>Checkbox</type>
</CustomField>