force-app/zurich-base/main/default/objects/Acta__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Ubicación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>