force-app/zurich-base/main/default/objects/Acta__c/fields/MeetingObjective__c.field-meta.xml
<CustomField>
    <fullName>MeetingObjective__c</fullName>
    <label>Objetivo de la Reunión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>