force-app/zurich-base/main/default/objects/Acta__c/fields/NumberOfActions__c.field-meta.xml
<CustomField>
    <fullName>NumberOfActions__c</fullName>
    <label>Número de Acciones</label>
    <summaryForeignKey>AccionesTratadasActa__c.Parent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>