force-app/zurich-base/main/default/objects/Acta__c/fields/OtherInformation__c.field-meta.xml
<CustomField>
    <fullName>OtherInformation__c</fullName>
    <label>Otra Información de Interés</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>